// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`choices snapshots disabled 1`] = `
<div>
  <Wrapped
    choiceBoard={true}
    disabled={true}
    onDropChoice={[MockFunction]}
    onRemoveChoice={[MockFunction]}
    style={
      Object {
        "background": "none",
      }
    }
  />
</div>
`;

exports[`choices snapshots empty 1`] = `
<div>
  <Wrapped
    choiceBoard={true}
    onDropChoice={[MockFunction]}
    onRemoveChoice={[MockFunction]}
    style={
      Object {
        "background": "none",
      }
    }
  >
    <Wrapped
      extraStyle={
        Object {
          "maxWidth": "95%",
        }
      }
      id="1"
      key="0"
      label="foo"
    />
  </Wrapped>
</div>
`;

exports[`choices snapshots empty 2`] = `
<div>
  <Wrapped
    choiceBoard={true}
    onDropChoice={[MockFunction]}
    onRemoveChoice={[MockFunction]}
    style={
      Object {
        "background": "none",
      }
    }
  >
    <Blank
      key="0"
    />
  </Wrapped>
</div>
`;

exports[`choices snapshots renders 1`] = `
<div>
  <Wrapped
    choiceBoard={true}
    onDropChoice={[MockFunction]}
    onRemoveChoice={[MockFunction]}
    style={
      Object {
        "background": "none",
      }
    }
  />
</div>
`;
